--- a/README.mkd
+++ b/README.mkd
@@ -5,4 +5,4 @@
 - `Python Flask`
 - `SQLAlchemy`
 
-# cite \href{https://doi.org/10.1093/bioinformatics/btv503}
+# cite [https://doi.org/10.1093/bioinformatics/btv503]
